--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+
 @import "tailwindcss";
+
+@theme {
+  --font-sans: "Roboto Mono", monospace;
+
+  --font-serif: "Cinzel Decorative", serif;
+
+  --font-mono: "Roboto Mono", monospace;
+}
